--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,38 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-<<<<<<< HEAD
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SettingsFragment"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Settings"
-        android:textSize="35dp"
-        android:layout_gravity="center"/>
-=======
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#2196F3"
+    android:background="#009688"
     android:gravity="center">
 
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/icon_setting"/>
+        android:src="@drawable/img"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SETTING"
+        android:text="Nguyễn Trung Duy - PH49915"
         android:textSize="24sp"
         android:textColor="#fff"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:gravity="center"/>
->>>>>>> 4fc3654 (Initial commit)
 
 </LinearLayout>
